--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,9 +27,9 @@ html, * {
 }
 
 .card {
-    backdrop-filter: blur(25px) saturate(137%);
-    -webkit-backdrop-filter: blur(25px) saturate(137%);
     background-color: rgba(69, 146, 196, 0.3);
+    backdrop-filter: blur(25px);
+    transform: translateY(10%);
     border-radius: 12px;
     border: 1px solid rgba(209, 213, 219, 0.3);
 }
