--- a/public/layout/css/theme-default.css
+++ b/public/layout/css/theme-default.css
@@ -142,6 +142,8 @@ a.bg-primary:hover, a.bg-primary:focus {
   background-color: #696cff;
   color: #fff;
   box-shadow: 0 2px 4px 0 rgba(105, 108, 255, 0.4);
+  padding: 0 40px;
+  align-items: center;
 }
 
 .list-group-item-primary {
